deploy/components/nibblesnbits-website/nibblesnbits.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nibblesnbits
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nibblesnbits-website
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nibblesnbits.chockablock.home
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nibblesnbits-website
  template:
    metadata:
      labels:
        app: nibblesnbits-website
    spec:
      imagePullSecrets:
        - name: my-registry-secret
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nibblesnbits-website
          image: mcpha1bj/nibblesnbits:latest
          ports:
            - containerPort: 8080 # Change this to 8080 for non-root
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsUser: 1000
          volumeMounts:
            - name: tmp-volume
              mountPath: /tmp
            - name: run-volume
              mountPath: /run
            - name: var-cache-volume
              mountPath: /var/cache/nginx
      volumes:
        - name: tmp-volume
          emptyDir: {}
        - name: run-volume
          emptyDir: {}
        - name: var-cache-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: nibblesnbits-website
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nibblesnbits.chockablock.home
spec:
  type: LoadBalancer
  selector:
    app: nibblesnbits-website
  ports:
    - protocol: TCP
      port: 80         # Port for the outside world
      targetPort: 8080 # Must match the containerPort above
