deploy/components/nibblesnbits-website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nibblesnbits-ingress
  namespace: nibblesnbits # Replace with the actual namespace used by that app
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: nibblesnbits.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nibblesnbits-website # Replace with the actual name of your service
            port:
              number: 80 # Replace with your service's port
